--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
-    {% assets "home_css" %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
+    <link rel="stylesheet" href="../static/css/vendor/bootstrap-4.1.3.css">
+  
 
     {% assets "home_js" %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
@@ -24,6 +24,13 @@
 
   </head>
   <body>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/">Create Store <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="/warehouse">Create Warehouse</a>
+          <a class="nav-item nav-link" href="/stores">Store List</a>
+          <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
+      </div>
     {% block content %}
     {% endblock %}
     <footer>
