"Added a login page"

--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 15px;
   position: relative;
   min-height: 100vh;
+  background-color:rgb(226, 38, 38);
+  background-image: ( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
+  background-image: ( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
+  background-image: ( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
 }
 
 footer {
@@ -18,4 +22,20 @@ footer {
 footer a {
   text-decoration: none;
   color: #303030;
+}
+.page-content{
+  padding:50px;
+  background-image: -moz-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
+  background-image: -webkit-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
+  background-image: -ms-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
+  justify-content: center;
+	-o-justify-content: center;
+	-ms-justify-content: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
+	align-items: center;
+	-o-align-items: center;
+	-ms-align-items: center;
+	-moz-align-items: center;
+	-webkit-align-items: center;
 }
