--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="../static/css/vendor/bootstrap-4.1.3.css">
+    <link rel="stylesheet" href="../static/css/custom.css">
   
 
     {% assets "home_js" %}
@@ -24,14 +25,14 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <a class="navbar-brand" href="#">NEXTAGRAM</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Users<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link active" href="/sign_up">Sign Up</a>
           <a class="nav-item nav-link" href="#"></a>
           <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
