--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -1,1 +1,36 @@
-<h1>Users#new</h1>
+{% extends "_layout.html" %}
+{% block content %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class=flashes>
+  {% for message in messages %}
+    <li>{{ message }}</li>
+  {% endfor %}
+  </ul>
+{%endif%}
+{% endwith %}
+<!-- Error Messages -->
+{% for error in errors if errors|length > 0 %}
+  <li class="error"><font color="red">{{error}}</font></li>
+{% endfor %}
+<div class ="container justify-content-center">
+<h1 class ="">SIGN UP</h1>
+<form method = "POST" action = "{{ url_for('users.create') }}">
+    <input type = "hidden" name = "csrf_token" value = "{{ csrf_token() }}" />
+    <div class="form-group w-50">
+        <label for="username">User Name:</label>
+        <input type='text' name='username' class="form-control" />
+        
+        <label for="email">Email:</label>
+        <input type='text' name='email' class="form-control" />
+
+        <label for="password">Password:</label>
+        <input type='password' name='password' class="form-control" />
+
+        <label for="name">Full Name:</label>
+        <input type='text' name='name' class="form-control" />
+    </div>
+      <button type="submit" class="btn btn-primary">Register</button>
+</form>
+</div>
+{% endblock %}
