--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -32,7 +32,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="{{ url_for('sessions.new') }}">Login<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link active" href="{{ url_for('users.new') }}">Sign Up</a>
           <a class="nav-item nav-link" href="#"></a>
           <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
