--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -7,7 +7,15 @@ body {
   background-image: ( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
   background-image: ( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
 }
-
+.edit-form form{
+  margin-left:5px;
+  padding:20px;
+}
+.edit-form h1{
+  margin-left:10px;
+  margin-right:auto;
+  font-size: 30px;
+}
 footer {
   font-size: 11px;
   position: absolute;
