--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -7,8 +7,11 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
-    <link rel="stylesheet" href="../static/css/vendor/bootstrap-4.1.3.css">
-    <link rel="stylesheet" href="../static/css/custom.css">
+    <!-- <link rel="stylesheet" href="../static/css/vendor/bootstrap-4.1.3.css">
+    <link rel="stylesheet" href="../static/css/custom.css"> -->
+    {% assets "home_css" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {% endassets %}
   
 
     {% assets "home_js" %}
@@ -34,7 +37,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="{{ url_for('sessions.new') }}">Login<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link active" href="{{ url_for('users.new') }}">Sign Up</a>
-          <a class="nav-item nav-link" href="#"></a>
+          <a class="nav-item nav-link" href="{{ url_for('sessions.logout') }}">Log Out</a>
           <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
         </div>
       </div>
