--- a/instagram_web/blueprints/users/templates/users/edit.html
+++ b/instagram_web/blueprints/users/templates/users/edit.html
@@ -13,23 +13,33 @@
 {% for error in errors if errors|length > 0 %}
   <li class="error"><font color="red">{{error}}</font></li>
 {% endfor %}
-<div class = "edit-form container">
-<h1>Profile : {{ userinfo.name }} </h1>
-<div class = "row justify-content-center">
-<div class = "col-8"> 
-<form method = "POST" action = "{{ url_for('users.edit', id = userinfo.id) }}">
-    <input type = "hidden" name = "csrf_token" value = "{{ csrf_token() }}" />
-    <div class="form-group w-50">    
-        <label for="username">Username:</label>
-        <input type='text' value = {{userinfo.username}} name='username' class="form-control" />
-
-        <label for="email">Email:</label>
-        <input type='Email' value = {{userinfo.email}} name='email' class="form-control" />
-
+<div class = "container">
+  <h4>Profile : {{ userinfo.name }} </h4>
+  <div class = "row justify-content-center">
+    <div class = "col-6 h-25 justify-content-center">
+      <div class ="profile_image">
+        <img class="card-img-top" src="https://picsum.photos/200/150/?random">
+      </div>
     </div>
-      <button type="submit" class="btn btn-primary">Update</button>
-</form>
-</div>
-</div>
+  </div>
+  <div class = "row justify-content-center">
+      <div class = "col-6"> 
+        <form method = "POST" action = "{{ url_for('users.update', id = userinfo.id) }}">
+          <input type = "hidden" name = "csrf_token" value = "{{ csrf_token() }}" />
+          <div class="form-group w-100">    
+              <label for="file">Files:</label>
+              <input type='file' name='profile_image' class="form-control" />
+              <button type="submit" class="w-100 text-align-center btn btn-primary mt-2">Upload</button><br>
+              
+              <label for="username">Username:</label>
+              <input type='text' value = {{userinfo.username}} name='username'class="form-control" />
+              
+              <label for="email">Email:</label>
+              <input type='Email' value = {{userinfo.email}} name='email' class="form-control" />
+              <button type="submit" class="w-100 btn btn-primary mt-2">Update</button>
+          </div>    
+        </form>
+      </div>
+    </div>
 </div>
 {%endblock%}
