--- a/instagram_web/blueprints/users/templates/users/index.html
+++ b/instagram_web/blueprints/users/templates/users/index.html
@@ -14,11 +14,11 @@
   <li class="error"><font color="red">{{error}}</font></li>
 {% endfor %}
 
-<h5 class ="ml-2">User Profile</h5>
+<h5 class ="ml-2">User Profile <span><a class ="text-light align-baseline btn btn-primary" href="{{ url_for('users.edit',id=userinfo.id) }}" style="width:200px">EDIT</a></span></h5> 
 <div class = "user_profile container justify-content-center">
   <div class = "row justify-content-center">
       <div class="col-sm-6 col-md-4 col-lg-6 mt-4">
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounde">
             <img class="card-img-top" src="https://picsum.photos/200/150/?random">
             <div class="card-block p-4">
                 <h4 class="card-title text-center">{{userinfo.name}}</h4>
