--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding-bottom: 15px;
   background-color: #f0f0f2;
+  /* background-image: -webkit-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%); */
   position: relative;
   min-height: 100vh;
 }
