--- a/instagram_web/blueprints/users/templates/users/edit.html
+++ b/instagram_web/blueprints/users/templates/users/edit.html
@@ -18,7 +18,7 @@
   <div class = "row justify-content-center">
     <div class = "col-6 h-25 justify-content-center">
       <div class ="profile_image">
-        <img class="card-img-top" src="https://picsum.photos/200/150/?random">
+        <img class="card-img-top" src="{{ userinfo.profile_image_url }}">
       </div>
     </div>
   </div>
@@ -27,9 +27,9 @@
         <form method = "POST" action = "{{ url_for('users.update', id = userinfo.id) }}">
           <input type = "hidden" name = "csrf_token" value = "{{ csrf_token() }}" />
           <div class="form-group w-100">    
-              <label for="file">Files:</label>
-              <input type='file' name='profile_image' class="form-control" />
-              <button type="submit" class="w-100 text-align-center btn btn-primary mt-2">Upload</button><br>
+              <label for="user_file">Image Files:</label>
+              <input type='file' name='user_file' class="form-control" />
+              <button type="submit" formmethod="POST" formaction="{{ url_for('users.upload_file', id = userinfo.id) }}" formenctype="multipart/form-data" class="w-100 text-align-center btn btn-primary mt-2">Upload</button><br>
               
               <label for="username">Username:</label>
               <input type='text' value = {{userinfo.username}} name='username'class="form-control" />
