--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -7,16 +7,43 @@ body {
   position: relative;
   min-height: 100vh;
 }
+footer {
+  margin-top:5px;
+}
+.login-logo{
+  font-family: 'Economica',Calibri;
+  font-size: 40px;
+  margin-top:25vh;
+  align-items:center;
+  padding-top:50px;
+  background-color: rgb(0,0,70,0.8);
+  border-radius: 10px;;
+  border:4px solid whitesmoke;
+  width:200px;
+  height:336px;
+}
+.login-logo img{
+  width:100px; height:100px;
+  padding:10px;
+  border-radius: 35px;
+  background: #f09433; 
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+}
+
 .navlogo{
   font-family: 'Fredoka One', Calibri;
 }
+
 .bg-image{
   background-image: url("../klcc.jpg"); 
   /* filter: blur(8px);
   -webkit-filter: blur(8px); */
 
   /* Full height */
-  width:50%;
+  height: 100%;
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
@@ -44,7 +71,21 @@ footer a {
   text-decoration: none;
   color: #303030;
 }
-.page-content{
+.story-img{
+  min-width: 150px;
+  min-height:150px;
+  max-height:200px;
+  max-width:350px;
+}
+.blur{
+  position: absolute;
+  /* filter: blur(6px);
+  -webkit-filter: blur(6px); */
+  width:100%;
+  height:100%;
+}
+
+  .page-content{
   padding:50px;
   background-image: -moz-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
   background-image: -webkit-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
