--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -3,6 +3,7 @@ body {
   height:100%;
   padding-bottom: 15px;
   background-color: #f0f0f2;
+  background-color:#15202b;
   /* background-image: -webkit-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%); */
   position: relative;
   min-height: 100vh;
@@ -10,10 +11,30 @@ body {
 footer {
   margin-top:5px;
 }
+.card{
+  background-color:#253341  
+}
+.feed{
+  color:#fff
+}
+.profile_pic img{
+  width: 50px;
+  height:50px;
+  border-radius: 25px;
+}
+.story_pic img{
+  width:300px;
+  height:300px;
+  border:1px dashed white;
+  border-radius:10px;
+}
+.feed_story{
+  border: 3px solid white;
+}
 .login-logo{
   font-family: 'Economica',Calibri;
   font-size: 40px;
-  margin-top:25vh;
+  margin-top:10vh;
   align-items:center;
   padding-top:50px;
   background-color: rgb(0,0,70,0.8);
