improve minor changes on UI

--- a/instagram_web/blueprints/users/templates/users/index.html
+++ b/instagram_web/blueprints/users/templates/users/index.html
@@ -17,9 +17,10 @@
 <!-- <a class ="ml-4 text-light align-baseline btn btn-primary" href="{{ url_for('users.edit',id=userinfo.id) }}" style="width:300px">EDIT PROFILE</a> -->
 <div class = "user_profile container justify-content-center">
   <div class = "row justify-content-center">
-      <div class="col-sm-6 col-md-4 col-lg-4">
-        <div class="card shadow p-3 mb-5 bg-white rounde">
-            <img class="card-img-top rounded-circle" src="{{ userinfo.profile_image_url }}">
+      <div class="col-sm-8 col-md-4 col-lg-4">
+        <div class="card text-center shadow p-3 mb-5 bg-white rounde">
+            <img class="card-img-top rounded-circle" src=" {%if not hide_profile%} {{ userinfo.profile_image_url }} {%endif%}">
+            {%if hide_profile%}<h3>User is private</h3>{%endif%}
             <div class="card-block p-4">
                 <h4 class="card-title text-center">{{userinfo.name}}</h4>
                 <div class="meta">
@@ -31,9 +32,30 @@
             </div>
         </div>
       </div>
+  <!-- Pending Request follower -->
+    {%if current_user.requesting_follower > 0 and current_user.id ==  userinfo.id %}
+    <div class = "col-sm-5 ">
+      <div class="card shadow p-3 mb-5 bg-white rounde">
+        <div class="card-block p-4">
+            <p class="card-title text-center">You have pending request follower<p>
+              <ul class="list-group">  
+                {% for fan in fans_info if fans_info|length > 0 %}
+                <li class="list-group-item profile_pic"> <img class="mr-1" src="{{ fan.profile_image_url }}"> {{ fan.name }} 
+                  <form  method = "POST" action="{{ url_for('users.approve_user', fan_id = fan.id, idol_id = current_user.id ) }}" style="display:inline-flex;">
+                    <input type = "hidden" name = "csrf_token" value = "{{ csrf_token() }}" />
+                    <button type="submit" class="btn btn-primary ml-3">Approve</button>
+                  </form>
+                </li>
+                {%endfor%}
+              </ul>
+        </div>
+      </div>
+    </div>
+    {%endif%}
   </div><hr>
   <div class = "row justify-content-start">
     <div class="card-group">
+      {%if not hide_profile%}
       {% for story in userinfo.stories if userinfo.stories|length > 0 %}
       <div class="card text-light mr-2 p-2">
         <img class="card-img-top" src="{{ story.story_image_url }}" alt="Card image cap">
@@ -49,6 +71,7 @@
         </div>
       </div>
       {%endfor%}  
+      {%endif%}
     </div>
   </div>
     
